@@ -9,7 +9,7 @@
 ## Информация
 - Создано с использованием JDK 21 версии.
 - .jar файл создан при помощи ShadowJar, уже содержит внутри все необходимые зависимости, при запуске не требуется указывать на компоненты JavaFX. Находится в /build/libs.
-- Использован JavaFX версии 21.0.5 для Windows.
+- Использован JavaFX версии 21.0.5 для Windows. Для запуска с других систем придется вручную указывать --module-path для JavaFX с --add-modules javafx.controls,javafx.fxml
 # EN
 An application for basic analysis of a file system created in Java programming language. Developed as part of a university course project.
 ## Features
@@ -20,4 +20,4 @@ An application for basic analysis of a file system created in Java programming l
 ## Information
 - Made using JDK version 21.
 - .jar file was made using ShadowJar, so it already has the necessary dependencies, when launching you do not need to enter any VM options showing the path to JavaFX module. .jar file is located in /build/libs folder.
-- Used JavaFX version 21.0.5 for Windows.
+- Used JavaFX version 21.0.5 for Windows. To launch from other operating systems you need to manually enter --module-path to JavaFX and also type --add-modules javafx.controls,javafx.fxml 
